--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +8,68 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.page {
+  padding-top: 20px;
+  padding-left: 18%;
+  padding-right: 18%;
+  background-color: #bedbff;
+}
+
+.pageContent {
+  padding: 10px;
+}
+
+.header {
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding-left: 18%;
+}
+
+.footer {
+  width: 100%;
+  position: fixed;
+  padding-bottom: 10px;
+  bottom: 0px;
+  left: 0;
+  text-align: center;
+  background-color: #bedbff;
+}
+
+.logo {
+  height: 150px;
+}
+
+.headerButtons {
+  justify-content: center;
+}
+
+.nav-link {
+  color: 'inherit';
+  text-decoration: 'none';
+}
+
+.inicio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-img {
+  height: 600px;
+  width: auto;
+  object-fit: cover;
+}
+
+.dropdown-item {
+  text-align: center;
 }
