--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,14 @@ body {
   align-items: center;
 }
 
+.contenido {
+  display: flex;
+}
+
+.contenido > * {
+  margin-right: 20px;
+}
+
 .carousel {
   width: 100%;
   height: 600px;
@@ -72,4 +80,24 @@ body {
 
 .dropdown-item {
   text-align: center;
+}
+
+.calendario {
+  background-color: white;
+  width: 280px;
+  height: 450px;
+}
+
+.horario {
+  display: flex;
+  flex-direction: column;
+}
+
+.horario div {
+  margin-bottom: 10px;
+}
+
+.horario div span:first-child {
+  font-weight: bold;
+  margin-right: 10px;
 }
