--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ body {
   padding-top: 20px;
   padding-left: 18%;
   padding-right: 18%;
-  background-color: #bedbff;
+  /* background-color: #bedbff; */
+  border-color: solid red;
 }
 
 .pageContent {
@@ -25,16 +26,19 @@ body {
   align-items: center;
   width: 100%;
   padding-left: 18%;
+  background-color: #bedbff;
 }
 
 .footer {
   width: 100%;
+  height: 100px;
   position: fixed;
   padding-bottom: 10px;
   bottom: 0px;
   left: 0;
   text-align: center;
   background-color: #bedbff;
+  padding: 15px;
 }
 
 .logo {
@@ -58,6 +62,7 @@ body {
 
 .contenido {
   display: flex;
+  bottom: 0;
 }
 
 .contenido > * {
@@ -65,8 +70,7 @@ body {
 }
 
 .carousel {
-  width: 100%;
-  height: 600px;
+  width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,4 +104,18 @@ body {
 .horario div span:first-child {
   font-weight: bold;
   margin-right: 10px;
+}
+
+.tarjetaInstagram {
+  display: inline-block;
+  width: 170px;
+  height: 210px;
+  background-color: white;
+  padding-top: 10px;
+}
+
+.imagenTarjeta {
+  display: block;
+  margin: 0 auto;
+  height: 150px;
 }
