--- a/src/index.css
+++ b/src/index.css
@@ -31,14 +31,22 @@ body {
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 55px;
   position: fixed;
   padding-bottom: 10px;
-  bottom: 0px;
+  bottom: -5px;
   left: 0;
   text-align: center;
   background-color: #bedbff;
   padding: 15px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
@@ -63,11 +71,21 @@ body {
 .contenido {
   display: flex;
   bottom: 0;
+  margin-bottom: 100px;
+  flex-wrap: wrap;
 }
 
 .contenido > * {
-  margin-right: 20px;
+  margin-right: 20px; /* Margen entre los elementos */
+  margin-bottom: 10px; /* Margen inferior para separar los elementos verticalmente */
+  max-width: calc(50% - 10px);
 }
+
+/* @media screen and (max-width: 768px) {
+  .contenido > * {
+    max-width: calc(100% - 10px);
+  }
+} */
 
 .carousel {
   width: 50%;
@@ -77,7 +95,7 @@ body {
 }
 
 .carousel-img {
-  height: 600px;
+  height: 100%;
   width: auto;
   object-fit: cover;
 }
@@ -118,4 +136,11 @@ body {
   display: block;
   margin: 0 auto;
   height: 150px;
+}
+
+.notificacion {
+  position: fixed;
+  top: 18%;
+  right: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
